# valve-server-manager

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  fallback_sdr.json  main.rs  ping.rs  privileges.rs  sdr.rs
src/firewall/: linux.rs  mod.rs  windows.rs
src/tui/: mod.rs  ui.rs
