[package]
name = "valve-server-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
directories = "5.0"
is_elevated = "0.1"
libc = "0.2"
ctrlc = "3.4"

